# ft

./: Cargo.toml  README.md
.devplans/: fuzzy-search.md  graph.md  notes.md  picker-recents.md  picker-target.md  tasks.md  timeblocks.md  tui-create.md  tui.md
docs/: architecture.md  query-dsl.md  task-format.md
ft/: Cargo.toml
ft-core/: Cargo.toml
ft-core/proptest-regressions/task/: emoji.txt
ft-core/src/: config.rs  daily.rs  error.rs  lib.rs  markdown.rs  notes.rs  recents.rs  search.rs  selector.rs  vault.rs
ft-core/src/graph/: mod.rs  parser.rs  rename.rs  resolve.rs  tests.rs
ft-core/src/query/: dsl.rs  expr.rs  mod.rs  preset.rs
ft-core/src/task/: emoji.rs  format.rs  hierarchy.rs  mod.rs  ops.rs  recurrence.rs
ft-core/src/timeblock/: doc.rs  mod.rs  ops.rs  report.rs
ft-core/tests/: real_vault.rs
ft/src/: main.rs
ft/src/cmd/: completions.rs  find.rs  man.rs  mod.rs  notes.rs  tasks.rs  tui.rs  vault.rs
ft/src/output/: links.rs  markdown.rs  mod.rs  ndjson.rs  table.rs
ft/src/tui/: app.rs  event.rs  mod.rs  tab.rs  tests.rs  ui.rs
ft/src/tui/snapshots/: ft__tui__tests__help_overlay_80x24.snap  ft__tui__tests__help_overlay_over_tasks_80x24.snap  ft__tui__tests__new_popup_prefilled_80x24.snap  ft__tui__tests__notes_move_multiselect_80x24.snap  ft__tui__tests__notes_move_source_picker_80x24.snap  ft__tui__tests__notes_move_target_picker_80x24.snap  ft__tui__tests__notes_open_picker_recents_80x24.snap  ft__tui__tests__quickline_empty_80x24.snap  ft__tui__tests__quickline_parse_error_80x24.snap  ft__tui__tests__quickline_toast_success_80x24.snap  ft__tui__tests__quickline_valid_preview_80x24.snap  ft__tui__tests__tasks_placeholder_80x24.snap  ft__tui__tests__tasks_tab_editing_80x24.snap  ft__tui__tests__tasks_tab_empty_80x24.snap  ft__tui__tests__tasks_tab_parse_error_80x24.snap  ft__tui__tests__tasks_tab_populated_80x24.snap  ft__tui__tests__timeblocks_tab_empty_100x24.snap  ft__tui__tests__timeblocks_tab_populated_today_100x24.snap  ft__tui__tests__welcome_tab_80x24.snap
ft/src/tui/tabs/: mod.rs  tasks.rs  welcome.rs
ft/src/tui/tabs/notes/: mod.rs  view.rs
ft/src/tui/tabs/tasks/: mod.rs  search.rs
ft/src/tui/tabs/timeblocks/: mod.rs  view.rs
ft/src/tui/widgets/: edit_buffer.rs  mod.rs  picker.rs
ft/src/tui/widgets/snapshots/: ft__tui__widgets__picker__tests__picker_empty_50x10.snap  ft__tui__widgets__picker__tests__picker_narrow_40x8.snap  ft__tui__widgets__picker__tests__picker_no_match_50x10.snap  ft__tui__widgets__picker__tests__picker_populated_50x10.snap
ft/tests/: find.rs  notes_links.rs  notes_rename.rs  polish.rs  real_vault_cli.rs  tasks_complete.rs  tasks_create.rs  tasks_list.rs
tests/fixtures/links/: Index.md
tests/fixtures/links/archive/: Index.md
tests/fixtures/links/notes/: alpha.md  beta.md  collision-linker.md  gamma.md  hub.md
tests/fixtures/links/notes/sub/: My Inner.md  inner.md
tests/fixtures/pathological/: all-emoji.md  deep-subtasks.md  malformed.md  weird-unicode.md
tests/fixtures/tiny/: sample-tasks.md
tests/fixtures/tiny/.ft/: config.toml
