[workspace]
members = ["ft", "ft-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
figment = { version = "0.10", features = ["toml"] }
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
ignore = "0.4"
rayon = "1.10"
tempfile = "3"

# Binary
clap = { version = "4", features = ["derive", "wrap_help"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }
is-terminal = "0.4"
dialoguer = { version = "0.11", default-features = false, features = ["fuzzy-select"] }

# Dev / test (shared)
assert_cmd = "2"
assert_fs = "1"
insta = "1"
predicates = "3"
proptest = "1"
