[workspace]
members = ["ft", "ft-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
figment = { version = "0.10", features = ["toml"] }
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
ignore = "0.4"
rayon = "1.10"
tempfile = "3"
nucleo-matcher = "0.3"
regex = "1"
urlencoding = "2"
minijinja = { version = "2", default-features = false, features = ["builtins", "serde"] }
petgraph = { version = "0.6", default-features = false, features = ["stable_graph"] }

# Binary
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.2"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }
is-terminal = "0.4"
dialoguer = { version = "0.11", default-features = false, features = ["fuzzy-select"] }
similar = "2"
ratatui = "0.29"
crossterm = "0.28"

# Dev / test (shared)
assert_cmd = "2"
assert_fs = "1"
insta = { version = "1", features = ["filters"] }
predicates = "3"
proptest = "1"
