[package]
name = "ft-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
nucleo-matcher = { workspace = true }
regex = { workspace = true }
urlencoding = { workspace = true }
minijinja = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
