[package]
name = "ft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
ft-core = { path = "../ft-core" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
is-terminal = { workspace = true }
dialoguer = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
