[package]
name = "ft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
ft-core = { path = "../ft-core" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
is-terminal = { workspace = true }
dialoguer = { workspace = true }
similar = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
nucleo-matcher = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
